MGMT-7900: Test infra proxy may fail if install-config contains Proxy (Capitalized) instead of proxy - Add support for both forms NO-ISSUE: Add acl for all IPv6 addresses (::/0) in addition to the existing 0.0.0.0/0 - For squid to allow proxying of IPv6 traffic

--- a/discovery-infra/test_infra/controllers/proxy_controller/templates/squid.conf.j2
+++ b/discovery-infra/test_infra/controllers/proxy_controller/templates/squid.conf.j2
@@ -4,6 +4,7 @@ acl all_auth proxy_auth REQUIRED
 http_access allow all_auth
 {% else %}
 acl all src 0.0.0.0/0
+acl all src ::/0
 {% if denied_port %}
 acl denied_ports port {{ denied_port }}
 http_access deny denied_ports
