--- a/ansible_files/roles/common/setup_ssh_key_pair/templates/config.j2
+++ b/ansible_files/roles/common/setup_ssh_key_pair/templates/config.j2
@@ -4,7 +4,7 @@ host {{ hostvars[host].inventory_hostname }}
     {% set private_ips = hostvars[host].ansible_all_ipv4_addresses | sort | ansible.utils.ipaddr('private') -%}
     Hostname {{ private_ips | first | default(hostvars[host].ansible_all_ipv4_addresses[0]) }}
     User {{ hostvars[host].ansible_user }}
-    IdentityFile {{ cluster_ssh_private_key_path }}
+    IdentityFile {{ ssh_private_key_path }}
     StrictHostKeyChecking no
 
 {% endfor %}
