MGMT-12442: Make service URL cutomizable
In the context of heterogeneous cluster, we want the service URL to
target the private IP of the primary Equinix machine in order to pull
the ingnition from the secondary machine.

--- a/ansible_files/roles/test-infra/export-heterogeneous-day2-configuration/templates/assisted-additional-config.j2
+++ b/ansible_files/roles/test-infra/export-heterogeneous-day2-configuration/templates/assisted-additional-config.j2
@@ -1,3 +1,5 @@
+export SERVICE_URL="{{ assisted_service_url }}"
+
 export DAY2_CPU_ARCHITECTURE="{{ ansible_architecture  }}"
 
 {% set private_ips = ansible_all_ipv4_addresses | sort | ansible.utils.ipaddr('private') -%}
