decouple oci ci machine stack from oci stack

--- a/ansible_files/roles/oci/create_infra/templates/terraform.tfvars.j2
+++ b/ansible_files/roles/oci/create_infra/templates/terraform.tfvars.j2
@@ -3,7 +3,7 @@ user_ocid               = "{{ oci_user_ocid }}"
 fingerprint             = "{{ oci_fingerprint }}"
 region                  = "{{ oci_region }}"
 private_key_path        = "{{ oci_private_key_path  }}"
-parent_compartment_ocid = "{{ oci_parent_compartment_ocid }}"
+oci_compartment_id      = "{{ oci_compartment_id }}"
 unique_id               = "{{ oci_unique_id }}"
 private_ssh_key_path    = "{{ private_ssh_key_path }}"
 public_ssh_key_path     = "{{ public_ssh_key_path }}"
