--- a/ansible_files/roles/oci/create_infra/templates/terraform.tfvars.j2
+++ b/ansible_files/roles/oci/create_infra/templates/terraform.tfvars.j2
@@ -1,9 +1,9 @@
-tenancy_ocid            = "{{ oci_tenancy_ocid }}"
-user_ocid               = "{{ oci_user_ocid }}"
-fingerprint             = "{{ oci_fingerprint }}"
-region                  = "{{ oci_region }}"
-private_key_path        = "{{ oci_private_key_path  }}"
-oci_compartment_id      = "{{ oci_compartment_id }}"
-unique_id               = "{{ oci_unique_id }}"
-private_ssh_key_path    = "{{ private_ssh_key_path }}"
-public_ssh_key_path     = "{{ public_ssh_key_path }}"
+unique_id             = "{{ unique_id }}"
+private_ssh_key_path  = "{{ private_ssh_key_path }}"
+public_ssh_key_path   = "{{ public_ssh_key_path }}"
+oci_tenancy_id        = "{{ oci_tenancy_id }}"
+oci_user_id           = "{{ oci_user_id }}"
+oci_fingerprint       = "{{ oci_fingerprint }}"
+oci_region            = "{{ oci_region }}"
+oci_private_key_path  = "{{ oci_private_key_path  }}"
+oci_compartment_id    = "{{ oci_compartment_id }}"
