--- a/ansible_files/roles/oci/setup_oci_for_test_infra/templates/oci-ccm-04-cloud-controller-manager-config.yaml.j2
+++ b/ansible_files/roles/oci/setup_oci_for_test_infra/templates/oci-ccm-04-cloud-controller-manager-config.yaml.j2
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   creationTimestamp: null
   name: oci-cloud-controller-manager
-  namespace: kube-system
+  namespace: oci-cloud-controller-manager
 stringData:
   cloud-provider.yaml: |
     auth:
