--- a/ansible_files/roles/oci/setup_oci_for_test_infra/templates/oci-kubelet-providerid.bu.j2
+++ b/ansible_files/roles/oci/setup_oci_for_test_infra/templates/oci-kubelet-providerid.bu.j2
@@ -22,11 +22,11 @@ storage:
             echo "Not replacing existing ${NODECONF}"
             exit 0
         fi
-        INSTANCE_ID=$(curl -H "Authorization: Bearer Oracle" -sL http://169.254.169.254/opc/v2/instance/id)
+        INSTANCE_ID=$(curl --retry 10 --connect-timeout 5 -H "Authorization: Bearer Oracle" -sL http://169.254.169.254/opc/v2/instance/id)
 
         cat > "${NODECONF}" <<EOF
         [Service]
-        Environment="KUBELET_PROVIDERID=oci://${INSTANCE_ID}"
+        Environment="KUBELET_PROVIDERID=${INSTANCE_ID}"
         EOF
 systemd:
   units:
@@ -36,21 +36,12 @@ systemd:
       [Unit]
       Description=Fetch kubelet provider id from OCI Metadata
 
-      # Run afterburn service for collect info from metadata server
-      # see: https://coreos.github.io/afterburn/usage/attributes/
-      # Not required due to OCP 4.1 boot image does not contain afterburn service
-      # see: https://issues.redhat.com/browse/OCPBUGS-7559
-      Wants=afterburn.service
-      After=afterburn.service
-
       # Wait for NetworkManager to report it's online
       After=NetworkManager-wait-online.service
       # Run before kubelet
       Before=kubelet.service
 
       [Service]
-      # Mark afterburn environment file optional, due to it is possible that afterburn service was not executed
-      EnvironmentFile=-/run/metadata/afterburn
       ExecStart=/usr/local/bin/oci-kubelet-providerid
       Type=oneshot
 
