change leader-elect-resource-name to match the RBAC rule

--- a/ansible_files/roles/oci/setup_oci_for_test_infra/templates/assisted-additional-config.j2
+++ b/ansible_files/roles/oci/setup_oci_for_test_infra/templates/assisted-additional-config.j2
@@ -21,4 +21,4 @@ export BASE_DOMAIN="{{ oci_dns_zone }}"
 
 export CUSTOM_MANIFESTS_FILES="{{ custom_manifests_dir }}"
 
-export OPENSHIFT_INSTALL_RELEASE_IMAGE=registry.ci.openshift.org/ocp/release:4.14.0-0.nightly-2023-07-05-071214
+export OPENSHIFT_INSTALL_RELEASE_IMAGE=quay.io/openshift-release-dev/ocp-release:4.14.0-ec.3-x86_64
