--- a/ansible_files/roles/oci/setup_oci_for_test_infra/templates/assisted-additional-config.j2
+++ b/ansible_files/roles/oci/setup_oci_for_test_infra/templates/assisted-additional-config.j2
@@ -1,5 +1,5 @@
 export PLATFORM=oci
-export CLUSTER_NAME="{{ unique_id }}"
+export CLUSTER_NAME="{{ namespace }}-{{ unique_hash }}"
 
 export OCI_COMPARTMENT="{{ oci_compartment_id }}"
 export OCI_USER="{{ oci_user_id }}"
