MGMT-15695: Use oci external integration

--- a/ansible_files/roles/oci/setup_oci_for_test_infra/templates/assisted-additional-config.j2
+++ b/ansible_files/roles/oci/setup_oci_for_test_infra/templates/assisted-additional-config.j2
@@ -1,4 +1,7 @@
-export PLATFORM=oci
+export PLATFORM=external
+export TF_PLATFORM=oci
+export EXTERNAL_PLATFORM_NAME=oci
+export EXTERNAL_CLOUD_CONTROLLER_MANAGER=External
 
 export OCI_COMPARTMENT="{{ oci_compartment_id }}"
 export OCI_USER="{{ oci_user_id }}"
